test-expected/large/modelpublish/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: modelpublish
    foo.com/duversion: 2.14.6-20190818.1566162853897
    foo.com/version: 2.14.6
  labels:
    app.kubernetes.io/name: modelpublish
    helm.sh/chart: modelpublish-2.14.6
  name: modelpublish
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: modelpublish
  type: ClusterIP
